reviewed all pom.xml files and added travis files