@@ -51,7 +51,6 @@
 		<spring.framework.version>4.3.3.RELEASE</spring.framework.version>
 		<vaadin.version>7.7.3</vaadin.version>
 		<vaadin.plugin.version>${vaadin.version}</vaadin.plugin.version>
-		<jetty.plugin.version>9.2.3.v20140905</jetty.plugin.version>
 		<springsecurity.version>4.2.0.RELEASE</springsecurity.version>
 		<project.scm.id>github</project.scm.id>
 		<project.source.version>1.8</project.source.version>
@@ -271,48 +270,6 @@
 		          </execution>
 		        </executions>
 		      </plugin>
-				<plugin>
-					<groupId>org.eclipse.jetty</groupId>
-					<artifactId>jetty-maven-plugin</artifactId>
-					<version>${jetty.plugin.version}</version>
-					<configuration>
-						<jvmArgs>-XX:PermSize=128M -XX:MaxPermSize=256M</jvmArgs>
-					    <scanIntervalSeconds>2</scanIntervalSeconds>
-					</configuration>
-				</plugin>
-				<plugin>
-					<groupId>org.kuali.maven.plugins</groupId>
-					<artifactId>properties-maven-plugin</artifactId>
-					<version>1.1.9</version>
-					<executions>
-						<execution>
-							<phase>initialize</phase>
-							<goals>
-								<goal>read-project-properties</goal>
-							</goals>
-							<configuration>
-								<locations>
-									<location>${HOME}/madura.properties</location>
-								</locations>
-								<quiet>true</quiet>
-							</configuration>
-						</execution>
-					</executions>
-				</plugin>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-gpg-plugin</artifactId>
-					<version>1.4</version>
-					<executions>
-						<execution>
-							<id>sign-artifacts</id>
-							<phase>verify</phase>
-							<goals>
-								<goal>sign</goal>
-							</goals>
-						</execution>
-					</executions>
-				</plugin>
 			      <plugin>
 			        <groupId>org.apache.maven.plugins</groupId>
 			        <artifactId>maven-jar-plugin</artifactId>
@@ -385,11 +342,6 @@
 	                    </execution>
 	                </executions>
 				</plugin>
-	            <plugin>
-	                <groupId>org.mortbay.jetty</groupId>
-	                <artifactId>jetty-maven-plugin</artifactId>
-	                <version>${jetty.plugin.version}</version>
-	            </plugin>
 	    		<plugin>
 					<groupId>nz.co.senanque</groupId>
 					<artifactId>madura-rules-maven-plugin</artifactId>
@@ -441,4 +393,38 @@
     <module>madura-springsecurity-login</module>
     <module>madura-permission-manager</module>
   </modules>
+	<profiles>
+		<profile>
+			<id>release</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-gpg-plugin</artifactId>
+						<version>1.5</version>
+						<executions>
+							<execution>
+								<id>sign-artifacts</id>
+								<phase>verify</phase>
+								<goals>
+									<goal>sign</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<groupId>org.sonatype.plugins</groupId>
+						<artifactId>nexus-staging-maven-plugin</artifactId>
+						<version>1.6.3</version>
+						<extensions>true</extensions>
+						<configuration>
+							<serverId>ossrh</serverId>
+							<nexusUrl>https://oss.sonatype.org/</nexusUrl>
+							<autoReleaseAfterClose>true</autoReleaseAfterClose>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 </project>
